# laboneq

./: .gitignore  AUTHORS  CHANGELOG.md  Cargo.toml  README.adoc  README.md  pyproject.toml  requirements-dev.txt  rust-toolchain.toml  setup.py
docs/: README.md  pyproject.toml
laboneq-benchmark/: README.md  pyproject.toml
laboneq-benchmark/examples/: example.ipynb
laboneq-benchmark/src/laboneq_benchmark/: __init__.py  device_setups.py  runner.py
laboneq-benchmark/src/laboneq_benchmark/experiments/: __init__.py  pulses.py  rabi.py  ramsey.py  randomized_benchmark.py  two_qubit_RB.py
laboneq-benchmark/src/laboneq_benchmark/instrumentation/: __init__.py  instrumentor.py
src/rust/: Cargo.toml
src/rust/codegenerator/: Cargo.toml
src/rust/codegenerator-py/: Cargo.toml
src/rust/codegenerator-py/src/: awg_event.rs  awg_processor.rs  code_generator.rs  common_types.rs  error.rs  ir_compat.rs  lib.rs  pulse_parameters.rs  py_conversions.rs  result.rs  settings.rs  signature.rs  triggers.rs  utils.rs  waveform_sampler.rs
src/rust/codegenerator-py/src/waveform_sampler/: mod.rs  pulse_parameters.rs  sampler.rs  signature.rs
src/rust/codegenerator-utils/: Cargo.toml
src/rust/codegenerator-utils/src/: lib.rs  pulse_parameters.rs  utils.rs
src/rust/codegenerator/src/: awg_delays.rs  awg_processor.rs  context.rs  context_validation.rs  device_traits.rs  event_list.rs  generate_awg_events.rs  generate_code.rs  generator.rs  handle_feedback_registers.rs  integration_kernels.rs  integration_units.rs  ir_adapter.rs  lib.rs  oscillator_allocation.rs  pulse_map.rs  result.rs  sample_waveforms.rs  settings.rs  signature.rs  tinysample.rs  tracing_utils.rs  triggers.rs  utils.rs  virtual_signal.rs  waveform.rs
src/rust/codegenerator/src/ir/: builders.rs  compilation_job.rs  experiment.rs  mod.rs
src/rust/codegenerator/src/node/: mod.rs
src/rust/interval-calculator/: Cargo.toml
src/rust/interval-calculator/src/: interval.rs  lib.rs
src/rust/interval-tree/: Cargo.toml
src/rust/interval-tree/src/: array_backed_interval_tree.rs  lib.rs
src/rust/ir/: Cargo.toml
src/rust/ir-python/: Cargo.toml
src/rust/ir-python/src/: common.rs  interval_ir.rs  lib.rs  loop_ir.rs  loop_iteration_ir.rs  oscillator_ir.rs  pulse_ir.rs  section_ir.rs  single_awg_ir.rs
src/rust/ir/src/: common.rs  interval_ir.rs  lib.rs  loop_ir.rs  loop_iteration_ir.rs  oscillator_ir.rs  pulse_ir.rs  section_ir.rs  single_awg_ir.rs
src/rust/laboneq-capnp/: Cargo.toml  build.rs
src/rust/laboneq-capnp/src/: lib.rs
src/rust/laboneq-common/: Cargo.toml
src/rust/laboneq-common/src/: compiler_settings.rs  device_options.rs  device_setup_fingerprint.rs  device_traits.rs  lib.rs  named_id.rs  prng_generator_qccs.rs  shfqc.rs  types.rs  uid.rs
src/rust/laboneq-compiler-py/: Cargo.toml
src/rust/laboneq-compiler-py/src/: capnp_deserializer.rs  capnp_py_types.rs  capnp_serializer.rs  chunking_mode.rs  compiler.rs  compiler_backend.rs  error.rs  execution.rs  experiment.rs  experiment_context.rs  experiment_equivalence.rs  lib.rs  parameter_store.rs  py_awg.rs  py_conversion.rs  py_device.rs  py_device_setup_capnp.rs  py_execution.rs  py_experiment.rs  py_experiment_ir.rs  py_helpers.rs  py_result_shape.rs  py_signal.rs  result_shape.rs  rt_compiler.rs  signal_properties.rs  signal_view.rs
src/rust/laboneq-dsl/: Cargo.toml
src/rust/laboneq-dsl/src/: experiment_signal.rs  lib.rs  node.rs  setup_description_qccs.rs  setup_description_zqcs.rs
src/rust/laboneq-error/: Cargo.toml
src/rust/laboneq-error/src/: lib.rs  resource_usage.rs
src/rust/laboneq-ir/: Cargo.toml
src/rust/laboneq-ir/src/: awg.rs  builders.rs  device.rs  experiment.rs  ir.rs  lib.rs  node.rs  pulse_sheet_schedule.rs  schedule.rs  signal.rs  system.rs
src/rust/laboneq-log/: Cargo.toml
src/rust/laboneq-log/src/: lib.rs  stage_timing.rs
src/rust/laboneq-opentelemetry-python/: Cargo.toml
src/rust/laboneq-opentelemetry-python/src/: context_carrier.rs  lib.rs  span_buffer.rs
src/rust/laboneq-py-utils/: Cargo.toml
src/rust/laboneq-py-utils/src/: device_setup_fingerprint.rs  experiment_ir.rs  lib.rs  logging.rs  pulse.rs  py_export.rs  py_object_interner.rs
src/rust/laboneq-qccs-backend/: Cargo.toml
src/rust/laboneq-qccs-backend/src/: backend.rs  device_setup_fingerprint.rs  experiment_view.rs  lib.rs  output_routing.rs  ports.rs  ppc_connections.rs  precompensation.rs  preprocessor.rs  setup_processor.rs
src/rust/laboneq-rust/: Cargo.toml
src/rust/laboneq-rust/src/: compiler.rs  error.rs  intervals.rs  lib.rs  logging.rs  utils.rs
src/rust/laboneq-scheduler/: Cargo.toml
src/rust/laboneq-scheduler/src/: adjust_acquire_lengths.rs  chunk_experiment.rs  chunk_ir.rs  error.rs  experiment_context.rs  ir.rs  ir_unroll.rs  lib.rs  node.rs  parameter_resolver.rs  parameter_store.rs  resolve_nt_match_case.rs  resolve_parameters.rs  resolve_repetition_mode.rs  schedule_info.rs  scheduled_node.rs  scheduled_to_ir.rs  scheduler.rs  signal_info.rs  utils.rs
src/rust/laboneq-tracing/: Cargo.toml
src/rust/laboneq-tracing/src/: lib.rs  opentelemetry_in_memory_exporter.rs  opentelemetry_provider.rs
src/rust/laboneq-units/: Cargo.toml
src/rust/laboneq-units/src/: angle.rs  duration.rs  lib.rs  tinysample.rs  unit.rs
src/rust/numeric-array/: Cargo.toml
src/rust/numeric-array/src/: lib.rs  py_bindings.rs
src/rust/rccow/: Cargo.toml
src/rust/rccow/examples/: example.rs
src/rust/rccow/src/: lib.rs  tests.rs
src/rust/sampled-event-handler/: Cargo.toml
src/rust/sampled-event-handler/src/: awg_events.rs  command_table_tracker.rs  feedback_register_layout.rs  lib.rs  sampled_event_handler.rs  shfppc_sweeper_config.rs  shfppc_sweeper_config_tracker.rs
src/rust/seqc-tracker/: Cargo.toml
src/rust/seqc-tracker/src/: awg.rs  compressor.rs  lib.rs  output_mute.rs  prng_tracker.rs  seqc_generator.rs  seqc_statements.rs  seqc_tracker.rs  wave_index_tracker.rs
src/rust/src/: intervals.rs  lib.rs
src/rust/utils/: Cargo.toml
src/rust/utils/benches/: vec_map_bench.rs
src/rust/utils/src/: lib.rs  vec_map.rs
(+1380 files in other folders)
