[workspace.package]
version = "26.4.0-b1"
authors = ["Zurich Instruments AG <info@zhinst.com>"]
edition = "2024"
publish = false
rust-version = "1.91"
description = "LabOne Q"
documentation = "README.md"
license = "Apache-2.0"

[workspace]
members = [
  "src/rust/*",

]
resolver = "2"

[workspace.dependencies]
# 3rd party crates
anyhow = "1.0"
approx = "0.5.1"
bitvec = "1.0"
clap = "4.5.38"
criterion = "0.8"
derive_more = "2.0.1"
indexmap = "2.9"
itertools = "0.14.0"
log = "0.4.27"
md5 = "0.8.0"
num-complex = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
numpy = "0.27.0"
pyo3 = { version = "0.27.0", features = [
  "abi3-py310",
  "generate-import-lib",
  "num-complex",
  "auto-initialize",
  "anyhow",
] }
pyo3-ffi = "0.27.0"
pyo3-log = "0.13.2"
rayon = "1.11.0"
regex = "1.11.3"
serde = "1.0"
serde_json = "1.0"
sha1 = "0.10.6"
smallvec = "1.15.1"
string-interner = "0.19.0"
thiserror = "2.0"

# 1st party
codegenerator = { path = "src/rust/codegenerator" }
interval-calculator = { path = "src/rust/interval-calculator" }
laboneq-dsl = { path = "src/rust/laboneq-dsl" }
laboneq-ir = { path = "src/rust/laboneq-ir" }
laboneq-log = { path = "src/rust/laboneq-log" }
laboneq-scheduler = { path = "src/rust/laboneq-scheduler" }
numeric-array = { path = "src/rust/numeric-array" }
codegenerator-py = { path = "src/rust/codegenerator-py" }
codegenerator-utils = { path = "src/rust/codegenerator-utils" }
laboneq-common = { path = "src/rust/laboneq-common" }
laboneq-units = { path = "src/rust/laboneq-units" }
laboneq-py-utils = { path = "src/rust/laboneq-py-utils" }
rccow = { path = "src/rust/rccow" }

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
unused_qualifications = "deny"
explicit-outlives-requirements = "warn"
redundant_lifetimes = "warn"
single-use-lifetimes = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
missing_assert_message = "allow"               # todo: warn
multiple_crate_versions = "allow"
todo = "warn"
verbose_file_reads = "warn"
