[workspace.package]
version = "0.1.0"
authors = ["Zurich Instruments AG <info@zhinst.com>"]
edition = "2021"
publish = false

[package]
name = "laboneq-rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "laboneq_rust"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.22.2", features = ["abi3-py39", "generate-import-lib"] }
interval-tree = { path = "interval-tree" }
ir = { path = "ir" }
ir_python = { path = "ir-python" }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[workspace]
members = ["interval-tree", "ir-python", "ir"]
