[package]
name = "codegenerator-py"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pyo3 = { workspace = true, features = ["anyhow"] }
anyhow = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }

codegenerator = { path = "../codegenerator" }
numeric-array = { path = "../numeric-array", features = ["pyo3"] }
