[package]
name = "codegenerator-py"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pyo3 = { workspace = true, features = ["anyhow"] }
anyhow = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }

codegenerator = { workspace = true }
numeric-array = { workspace = true, features = ["pyo3"] }
laboneq-dsl = { workspace = true }
codegenerator-utils = { workspace = true }
laboneq-py-utils = { workspace = true }
laboneq-common = { workspace = true }
laboneq-units = { workspace = true }
