[package]
name = "codegenerator"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license = "MIT"


[dependencies]
thiserror = "2.0.0"
anyhow = "1.0"
num-complex = "0.4"
indexmap = "2.9.0"

interval-calculator = { path = "../interval-calculator" }
numeric-array = { path = "../numeric-array"}
