[package]
name = "codegenerator"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license = "MIT"

[lints]
workspace = true


[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
sha1 = { workspace = true }
md5 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

interval-calculator = { path = "../interval-calculator" }
numeric-array = { path = "../numeric-array" }
laboneq-units = { path = "../laboneq-units" }
