[package]
name = "codegenerator"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true


[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
indexmap = { workspace = true }
log = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
sha1 = { workspace = true }
md5 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
rayon = { workspace = true }

interval-calculator = { workspace = true }
numeric-array = { workspace = true }
laboneq-units = { workspace = true }
laboneq-common = { workspace = true }
laboneq-log = { workspace = true }
laboneq-ir = { workspace = true }
laboneq-dsl = { workspace = true }
codegenerator-utils = { workspace = true }

[dev-dependencies]
laboneq-dsl = { workspace = true, features = ["test_utils"] }
