[package]
name = "interval-tree"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
