[package]
name = "ir_python"
version = "0.1.0"
edition = "2018"

[dependencies]
ir = { path = "../ir" }
pyo3 = { version = "0.22.2", features = [
    "abi3-py39",
    "generate-import-lib",
    "multiple-pymethods",
] }
numpy = "0.22"
pyderive = "0.7.0"
ndarray = "0.16.1"
thiserror = "1.0.58"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
