[package]
name = "laboneq-common"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
string-interner = { workspace = true }
regex = { workspace = true }
laboneq-units = { workspace = true }

[lints]
workspace = true

[features]
test_utils = []
