[package]
name = "laboneq-dsl"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
num-complex = { workspace = true }
num-traits = { workspace = true }

numeric-array = { workspace = true }
laboneq-common = { workspace = true }
laboneq-units = { workspace = true }

[features]
test_utils = ["laboneq-common/test_utils"]

[lints]
workspace = true
