[package]
name = "laboneq-error"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
pyo3 = { workspace = true, optional = true }
thiserror = { workspace = true }

laboneq-log = { workspace = true }

[lints]
workspace = true
