[package]
name = "laboneq-log"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
log = { workspace = true }

[lints]
workspace = true
