[package]
name = "laboneq-opentelemetry-python"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["trace"] }
pyo3 = { workspace = true }
serde_json = { workspace = true }

laboneq-tracing = { workspace = true }

[lints]
workspace = true
