[package]
name = "laboneq-qccs-backend"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
smallvec = { workspace = true }

laboneq-compiler-py = { workspace = true }
laboneq-common = { workspace = true }
laboneq-dsl = { workspace = true }
laboneq-ir = { workspace = true }
laboneq-error = { workspace = true }

[dev-dependencies]
