[package]
name = "laboneq-rust"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
name = "laboneq_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["anyhow"] }
num-complex = { workspace = true }
pyo3-log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }

laboneq-common = { path = "../laboneq-common" }
codegenerator-py = { path = "../codegenerator-py" }
laboneq-scheduler = { path = "../laboneq-scheduler" }
numeric-array = { path = "../numeric-array", features = ["pyo3"] }
laboneq-units = { path = "../laboneq-units" }
laboneq-log = { path = "../laboneq-log" }
