[package]
name = "laboneq-rust"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
name = "laboneq_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["anyhow"] }
num-complex = { workspace = true }
pyo3-log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }
serde_json = { workspace = true }

laboneq-common = { workspace = true }
laboneq-dsl = { workspace = true }
codegenerator-py = { workspace = true }
laboneq-scheduler = { workspace = true }
numeric-array = { workspace = true, features = ["pyo3"] }
laboneq-units = { workspace = true }
laboneq-log = { workspace = true }
laboneq-ir = { workspace = true }
laboneq-py-utils = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
