[package]
name = "laboneq-scheduler"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
smallvec = { workspace = true }

laboneq-common = { path = "../laboneq-common" }
laboneq-dsl = { path = "../laboneq-dsl" }
laboneq-units = { path = "../laboneq-units" }
laboneq-log = { path = "../laboneq-log" }
numeric-array = { path = "../numeric-array" }

[dev-dependencies]
laboneq-common = { path = "../laboneq-common", features = ["test_utils"] }

[lints]
workspace = true
