[package]
name = "laboneq-scheduler"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
smallvec = { workspace = true }

laboneq-common = { workspace = true }
laboneq-dsl = { workspace = true }
laboneq-ir = { workspace = true }
laboneq-units = { workspace = true }
laboneq-log = { workspace = true }
numeric-array = { workspace = true }

[dev-dependencies]
laboneq-common = { workspace = true, features = ["test_utils"] }

[lints]
workspace = true
