[package]
name = "laboneq-units"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
num-integer = { workspace = true }
num-traits = { workspace = true }

[lints]
workspace = true
