[package]
name = "laboneq-units"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["add", "not", "add_assign"] }
num-integer = { workspace = true }
num-traits = { workspace = true }

[lints]
workspace = true
