[package]
name = "numeric-array"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license = "MIT"

[lints]
workspace = true

[features]
pyo3 = ["dep:pyo3", "dep:numpy"]

[dependencies]
pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
num-complex = { workspace = true }

[dev-dependencies]
pyo3-ffi = { workspace = true }
approx = { workspace = true }
