[package]
name = "numeric-array"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
pyo3 = ["dep:pyo3", "dep:numpy"]

[dependencies]
pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
num-complex = { workspace = true }

[dev-dependencies]
pyo3-ffi = { workspace = true }
approx = { workspace = true }
